# mopsimcbot

./: README.md  pyproject.toml  run.py
mopsimcbot/: bot.py  checks.py  wow.py
mopsimcbot/cogs/: __init__.py  simc_cog.py
